[gd_scene load_steps=9 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://gem/Gem.tscn" type="PackedScene" id=2]
[ext_resource path="res://main/Main.gd" type="Script" id=3]
[ext_resource path="res://main/HUD.gd" type="Script" id=4]
[ext_resource path="res://asset/assets/Kenney Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 38
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 38
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
Gem = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 1.41422, 0 )

[node name="GemContainer" type="Node2D" parent="."]

[node name="HUD" type="Control" parent="."]
margin_right = 480.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchor_right = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LavelScore" type="Label" parent="HUD/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="LavelTimer" type="Label" parent="HUD/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="LabelCountLevel" type="Label" parent="HUD/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1

[node name="GameOverLavel" type="Label" parent="HUD"]
margin_left = 19.7991
margin_top = 194.455
margin_right = 467.799
margin_bottom = 313.455
custom_fonts/font = SubResource( 3 )
text = "Perdiste Sapo
KL!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTimer" type="Timer" parent="."]
autostart = true
[connection signal="picked" from="Player" to="." method="_on_Player_picked"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
